force-app/main/default/objects/Company__c/fields/Current_Projct__c.field-meta.xml
<CustomField>
    <fullName>Current_Projct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Projct</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Company</relationshipLabel>
    <relationshipName>Company</relationshipName>
    <type>Lookup</type>
</CustomField>