force-app/main/default/objects/Company__c/fields/Full_Company_Budget__c.field-meta.xml
<CustomField>
    <fullName>Full_Company_Budget__c</fullName>
    <label>Full Company Budget</label>
    <summarizedField>Budget__c.Full_Budget__c</summarizedField>
    <summaryForeignKey>Budget__c.Company__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>