force-app/main/default/objects/Company__c/fields/Head_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Company</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Company</relationshipLabel>
    <relationshipName>Company</relationshipName>
    <type>Lookup</type>
</CustomField>