force-app/main/default/objects/Company__c/fields/Is_international_company__c.field-meta.xml
<CustomField>
    <fullName>Is_international_company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is international company</label>
    <type>Checkbox</type>
</CustomField>